--- a/sass/layout/_interests.scss
+++ b/sass/layout/_interests.scss
@@ -68,7 +68,6 @@
   }
 
   &__artbox {
-    height: 600px;
     // background-color: lightsteelblue;
     position: relative;
     overflow: hidden;
