--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -18,7 +18,7 @@
 }
 .section-interests {
   min-height: 100vh; // Makes the section take up the entire viewport by default
-  height: auto; // Height will resize depending on the amount of content
+  // height: auto; // Height will resize depending on the amount of content
   padding: 4rem;
   // background-color: lightcoral;
 }
